[gd_scene load_steps=12 format=3 uid="uid://cuc4snv4hw2o8"]

[ext_resource type="PackedScene" uid="uid://rfo20p2rqocf" path="res://scenes/player.tscn" id="1_2t085"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_4ygic"]
[ext_resource type="PackedScene" uid="uid://uoke5ahsfqd0" path="res://scenes/mob.tscn" id="2_kd758"]
[ext_resource type="FontFile" uid="uid://dxw8lg2sdm1fj" path="res://fonts/Montserrat-Medium.ttf" id="4_kf0pi"]
[ext_resource type="Script" path="res://scenes/score_label.gd" id="5_rgh0o"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n6j0b"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_m0orq"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pc3wc"]
albedo_color = Color(0.852868, 0.407197, 0.277785, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_6vfwq"]
material = SubResource("StandardMaterial3D_pc3wc")

[sub_resource type="Curve3D" id="Curve3D_gmbut"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.0158, 0, -14.1487, 0, 0, 0, 0, 0, 0, 12.9668, 0, -14.1487, 0, 0, 0, 0, 0, 0, 12.9668, 0, 15.165, 0, 0, 0, 0, 0, 0, -13.2379, 0, 15.054, 0, 0, 0, 0, 0, 0, -13.0158, 0, -14.1487),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_m8fly"]
default_font = ExtResource("4_kf0pi")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_4ygic")
mob_scene = ExtResource("2_kd758")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.14801)
shape = SubResource("BoxShape3D_n6j0b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_m0orq")
skeleton = NodePath("../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 19, 0)

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 19, 19)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
projection = 1
size = 19.0

[node name="Player" parent="." instance=ExtResource("1_2t085")]

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 15)
mesh = SubResource("CylinderMesh_6vfwq")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -14)
mesh = SubResource("CylinderMesh_6vfwq")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 15)
mesh = SubResource("CylinderMesh_6vfwq")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -14)
mesh = SubResource("CylinderMesh_6vfwq")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_gmbut")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13.0158, 0, -14.1487)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_m8fly")

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 30.0
offset_top = 19.0
offset_right = 91.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_rgh0o")

[node name="Retry" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.356863)

[node name="Label" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -14.0
offset_right = 107.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to retry"

[node name="StartScreen" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.356863)

[node name="Button" type="Button" parent="UI/StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="UI/StartScreen/Button" to="." method="_on_button_pressed"]
